# dataverse-client

./: .flake8  CITATION.cff  README.md  makefile  pyproject.toml
.github/workflows/: tag_and_publish.yml  test_and_lint.yml
docs/source/: conf.py
examples/: example_dataverse_client.py  example_use_models.py
examples/generate_models/: .gitignore  README.md  example_use_models.py  generate_table_models.py  pyproject.toml  test_make_model.py
src/dataverse_client/: __init__.py  odata_filters.py  rest_client.py
src/dataverse_models/: README.md  example_use_models.py  generate_table_models.py  models.py.jinja2
tests/: test_config_model.py  test_example.py  test_rest_client.py  test_table_queries.py
