[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dataverse-client"
description = "Simple client for interacting with MS Dataverse via REST API"
version = "0.1.0"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"

dependencies = [
    "msal>=1",
    "platformdirs>=4",
    "pydantic-settings[yaml]>=2.2",
    "requests>=2",
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]

codegen = [
    'jinja2',
    'devtools',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | .conda
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["dataverse_client", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 90

[tool.isort]
line_length = 100
profile = "black"
skip = [".conda"]

[tool.interrogate]
exclude = ["setup.py", "docs", "build", ".conda"]
fail-under = 100

[tool.ruff]
line-length=100