[project]
name = "dataverse-client"
version = "0.1.1"
description = "Simple client for interacting with MS Dataverse via REST API"
readme = "README.md"
authors = [
  { name="Patrick Latimer", email="patrick.latimer@alleninstitute.org" },
  { name="Allen Institute" }
]
requires-python = ">=3.10"
dependencies = [
    "msal>=1",
    "platformdirs>=4",
    "pydantic-settings[yaml]>=2.2",
    "requests>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "tests src --cov=src --doctest-modules" # --cov-fail-under=90
