[project]
name = "generate-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataverse-client",
    "devtools>=0.12.2",
    "jinja2>=3.1.6",
]

[tool.uv.sources]
dataverse-client = { path = "../.." }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Tell Hatchling to include the root directory instead of src/
[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
generate-models = "generate_table_models:main_generate_models"